@@ -4,6 +4,7 @@ package aniAdd.config;
 import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 @Slf4j
@@ -107,11 +108,11 @@ public class AniConfiguration {
     @Builder.Default private int cacheTTLInDays = 30;
 
     public String getEpisodePath(String relativePath) {
-        return Paths.get(tvShowFolder, relativePath).toString();
+        return Path.of(tvShowFolder, relativePath).toString();
     }
 
     public String getMoviePath(String relativePath) {
-        return Paths.get(movieFolder, relativePath).toString();
+        return Path.of(movieFolder, relativePath).toString();
     }
 
     @Getter
